--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "karardesteksistemleri-67e2f"
-  }
+    "default": "karardesteksistemleri-67e2f",
+    "e": "karardesteksistemleri-67e2f"
+  },
+  "targets": {},
+  "etags": {}
 }
